# malayalam-pdf-translator

./: .gitignore  Dockerfile  README.md  app.py  packages.txt  pdf_extractor.py  pdf_generator.py  pdf_generator_pango.py  pyproject.toml  requirements.txt  run.sh  setup.sh  translate_pdf.py  translator_core.py
.github/workflows/: sync_to_hf.yml
.streamlit/: config.toml
